--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ node_modules/
 # environment variables
 .env
 .env*.local
+
+# Next.js
+.next/
+out/
+next-env.d.ts
+.next/cache/
+**/*.pack
+**/*.pack.gz
+
+# Build
+dist/
+build/
+
+# Cache
+.cache/
+*.cache
+.eslintcache
