--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install prettier
+        run: npm install --no-save prettier
+
+      - name: Run formatter check
+        run: npx prettier --check --ignore-path .gitignore .
+
       - name: Run linter
         run: npm run lint
 
