fix/upload artifactes from test coverage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,15 +66,18 @@ jobs:
           path: format-report.txt
           retention-days: 5
 
-      - name: Run unit tests
-        run: npm run test
+      # Zmieniony krok - uruchamiam testy z generowaniem pokrycia
+      - name: Run unit tests with coverage
+        run: npm run test:coverage
 
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: ./coverage
+          path: |
+            ./coverage
+            ./test-results
           retention-days: 5
 
   build:
