--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@axe-core/playwright": "^4.10.1",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.52.0",
-    "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -50,12 +49,14 @@
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.2",
     "@vitest/ui": "^3.1.2",
+    "autoprefixer": "^10.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
     "happy-dom": "^17.4.6",
     "jsdom": "^26.1.0",
     "msw": "^2.7.5",
+    "postcss": "^8",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.1.2"
