--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,10 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          # Instaluj bezpośrednio wymagane pakiety, aby upewnić się, że są dostępne
+          npm install -D tailwindcss@3.3.3 postcss@8.4.27 autoprefixer@10.4.14
 
       # Dodane kroki diagnostyczne
       - name: Verify installed modules
@@ -47,10 +50,6 @@ jobs:
 
       - name: Run linter
         run: npm run lint
-
-      # Auto-format code instead of just checking
-      - name: Format code
-        run: npx prettier --write --ignore-path .gitignore .
 
       # Format check that doesn't fail the build
       - name: Check code formatting
@@ -108,13 +107,16 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install --no-fund --no-audit
 
-      # Dodany krok diagnostyczny przed buildowaniem
+      - name: Run CI setup script
+        run: node setup-ci.js
+
       - name: Verify tailwindcss installation
         run: |
           echo "Checking for tailwindcss module..."
-          npm list tailwindcss || true
+          npm list tailwindcss
           echo "Content of PostCSS config:"
           cat postcss.config.mjs
           echo "Content of Tailwind config:"
@@ -122,14 +124,3 @@ jobs:
 
       - name: Build production
         run: npm run build
-
-      - name: Verify latest versions of GitHub Actions
-        run: |
-          echo "Checking actions/checkout version..."
-          curl -s https://api.github.com/repos/actions/checkout/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([0-9]+).*/\1/'
-
-          echo "Checking actions/setup-node version..."
-          curl -s https://api.github.com/repos/actions/setup-node/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([0-9]+).*/\1/'
-
-          echo "Checking actions/upload-artifact version..."
-          curl -s https://api.github.com/repos/actions/upload-artifact/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([0-9]+).*/\1/'
