--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,11 +82,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node.js (with npm cache)
         uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
           cache: 'npm'
+
+      # Cache Next.js build artifacts between runs
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          # Cache the .next/cache folder
+          path: |
+            ${{ github.workspace }}/.next/cache
+          # Use lockfile checksum as part of the key
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+          # Fallback to any previous Next.js cache
+          restore-keys: |
+            ${{ runner.os }}-nextjs-
 
       - name: Install dependencies
         run: |
