--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,24 +82,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js (with npm cache)
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
           cache: 'npm'
-
-      - name: Restore or cache npm & Next.js build
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            ${{ github.workspace }}/.next/cache
-            key: ${{ runner.os }}-nextjs-\
-            ${{ hashFiles('**/package-lock.json') }}-\
-            ${{ hashFiles('**/*.{js,jsx,ts,tsx}') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
-            ${{ runner.os }}-nextjs-
 
       - name: Install dependencies
         run: |
