--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm ci --include=dev
           npm install -D tailwindcss@latest postcss@latest autoprefixer@latest
 
       - name: Build production
