--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:report": "playwright show-report",
-    "dev:e2e": "NODE_ENV=test next dev"
+    "dev:e2e": "NODE_ENV=test next dev",
+    "build:css": "tailwindcss -i ./src/app/globals.css -o ./src/styles/output.css"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.4",
@@ -26,18 +27,15 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
-    "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
     "next": "15.2.5",
-    "postcss": "^8.4.27",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^3.3.3",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
@@ -53,12 +51,15 @@
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.2",
     "@vitest/ui": "^3.1.2",
+    "autoprefixer": "^10.4.14",
     "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
     "happy-dom": "^17.4.6",
     "jsdom": "^26.1.0",
     "msw": "^2.7.5",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5",
     "vitest": "^3.1.2"
   }
