--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,6 @@ jobs:
         run: |
           npm install -D tailwindcss@latest postcss@latest autoprefixer@latest
           npm ci
-          npm run build:css || true
 
       - name: Run linter
         run: npm run lint
@@ -93,7 +92,11 @@ jobs:
         run: |
           npm install -D tailwindcss@latest postcss@latest autoprefixer@latest
           npm ci --include=dev
-          npm run build:css || true
+
+      - name: Initialize CSS
+        run: |
+          mkdir -p src/styles
+          npx tailwindcss -i ./src/app/globals.css -o ./src/styles/output.css
 
       - name: Build production
         run: npm run build
