--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,13 +90,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install -D tailwindcss@latest postcss@latest autoprefixer@latest
+          npm install -D tailwindcss postcss autoprefixer
           npm ci --include=dev
 
-      - name: Initialize CSS
-        run: |
-          mkdir -p src/styles
-          npx tailwindcss -i ./src/app/globals.css -o ./src/styles/output.css
+      - name: Generate CSS
+        run: npx tailwindcss -i ./src/app/globals.css -o ./src/styles/output.css
 
       - name: Build production
         run: npm run build
