Privided supabase env variables for build purposes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,8 @@ jobs:
 
     env:
       NODE_ENV: production
+      NEXT_PUBLIC_SUPABASE_URL: 'https://example.supabase.co'
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: 'dummy-key-for-build'
 
     steps:
       - name: Checkout code
