--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,7 @@ jobs:
       NODE_ENV: production
       NEXT_PUBLIC_SUPABASE_URL: 'https://example.supabase.co'
       NEXT_PUBLIC_SUPABASE_ANON_KEY: 'dummy-key-for-build'
+      OPENROUTER_API_KEY: 'dummy-key-for-build'
 
     steps:
       - name: Checkout code
