--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:report": "playwright show-report",
     "dev:e2e": "NODE_ENV=test next dev",
-    "build:css": "tailwindcss -i ./src/app/globals.css -o ./src/styles/output.css"
+    "generate:css": "mkdir -p src/styles && npx tailwindcss -i ./src/app/globals.css -o ./src/styles/output.css"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.4",
