--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -119,5 +119,9 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: |
-            pages deploy out --project-name=10x-cards --commit-dirty=true
+            pages deployment create --project-name=10x-cards \
+              --env NEXT_PUBLIC_SUPABASE_URL="${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" \
+              --env NEXT_PUBLIC_SUPABASE_ANON_KEY="${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" \
+              --env OPENROUTER_API_KEY="${{ secrets.OPENROUTER_API_KEY }}" \
+              --commit-dirty=true ./out
           wranglerVersion: '3'
