--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/crypto-js": "^4.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
     "next": "15.2.5",
@@ -36,7 +38,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
