--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -90,6 +90,7 @@ jobs:
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       NEXT_TELEMETRY_DISABLED: 1
+      CLOUDFLARE_PAGES: true
 
     steps:
       - name: Checkout code
