--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,15 @@
 [env.production]
 vars = { ENVIRONMENT = "production" }
 
+# Build configuration
+[build]
+command = "npm run build"
+
+[pages]
+build_output_directory = ".next"
+compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
+
 # Secrets that should be set in Cloudflare Dashboard:
 # - NEXT_PUBLIC_SUPABASE_URL
 # - NEXT_PUBLIC_SUPABASE_ANON_KEY
