--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
-    "@cloudflare/next-on-pages": "^0.0.0-3d84ab0",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -70,6 +69,10 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "vercel": "39.1.1"
+  },
+  "overrides": {
+    "vercel": "$vercel"
   }
 }
