--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.3",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/crypto-js": "^4.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -69,8 +68,8 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5",
-    "vitest": "^3.1.2",
-    "vercel": "39.1.1"
+    "vercel": "39.1.1",
+    "vitest": "^3.1.2"
   },
   "overrides": {
     "vercel": "$vercel"
